--- a/template/menus/sideBarAdmin.html
+++ b/template/menus/sideBarAdmin.html
@@ -3,9 +3,9 @@
     <!-- Sidebar - Brand -->
     <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{% url "vistaAdmin" %}">
         <div class="sidebar-brand-icon rotate-n-15">
-            <i class="fas fa-laugh-wink"></i>
+            <i class=""></i>
         </div>
-        <div class="sidebar-brand-text mx-3">Admin</div>
+        <div class="sidebar-brand-text mx-3">Panel de Navegacion {{nombre_admin}}</div>
     </a>
 
     <!-- Divider -->
@@ -23,122 +23,34 @@
 
     <!-- Heading -->
     <div class="sidebar-heading">
-        Categorias
+        Mis opciones de administradores
     </div>
 
     <!-- Nav Item - Tables -->
-    <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
-            aria-expanded="true" aria-controls="collapseUtilities">
-            <i class="fas fa-fw fa-wrench"></i>
-            <span>Areas</span>
-        </a>
-        <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
-            data-parent="#accordionSidebar">
-            <div class="bg-white py-2 collapse-inner rounded">
-                <h6 class="collapse-header">Productos:</h6>
-                <a class="collapse-item" href="#">Ver Áreas</a>
-                <a class="collapse-item" href="#">Agregar Áreas</a>
 
-            </div>
-        </div>
-    </li>
-
-    <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
-            aria-expanded="true" aria-controls="collapseUtilities">
-            <i class="fas fa-fw fa-wrench"></i>
-            <span>Cargos</span>
-        </a>
-        <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
-            data-parent="#accordionSidebar">
-            <div class="bg-white py-2 collapse-inner rounded">
-                <h6 class="collapse-header">Categorias:</h6>
-                <a class="collapse-item" href="#">Ver Cargos</a>
-                <a class="collapse-item" href="#">Agregar Cargos</a>
-
-
-            </div>
-        </div>
-    </li>
-
-    <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
-            aria-expanded="true" aria-controls="collapseUtilities">
-            <i class="fas fa-fw fa-wrench"></i>
-            <span>Empresas</span>
-        </a>
-        <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
-            data-parent="#accordionSidebar">
-            <div class="bg-white py-2 collapse-inner rounded">
-                <h6 class="collapse-header">Categorias:</h6>
-                <a class="collapse-item" href="#">Ver Empresas</a>
-                <a class="collapse-item" href="#">Agregar Empresas</a>
-
-
-            </div>
-        </div>
-    </li>
-
-    <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
-            aria-expanded="true" aria-controls="collapseUtilities">
-            <i class="fas fa-fw fa-wrench"></i>
-            <span>Secciones</span>
-        </a>
-        <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
-            data-parent="#accordionSidebar">
-            <div class="bg-white py-2 collapse-inner rounded">
-                <h6 class="collapse-header">Categorias:</h6>
-                <a class="collapse-item" href="#">Ver Secciones</a>
-                <a class="collapse-item" href="#">Agregar Secciones</a>
-
-
-            </div>
-        </div>
-    </li>
-
-    <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
-            aria-expanded="true" aria-controls="collapseUtilities">
-            <i class="fas fa-fw fa-wrench"></i>
-            <span>Contratos</span>
-        </a>
-        <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
-            data-parent="#accordionSidebar">
-            <div class="bg-white py-2 collapse-inner rounded">
-                <h6 class="collapse-header">Categorias:</h6>
-                <a class="collapse-item" href="#">Ver Contratos</a>
-                <a class="collapse-item" href="#">Agregar Contratos</a>
-
-
-            </div>
-        </div>
-    </li>
-        
-
-    </li>
-
-    <!-- Divider -->
     <hr class="sidebar-divider d-none d-md-block">
 
      <!-- Nav Item - Tables -->
     <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
-            aria-expanded="true" aria-controls="collapseUtilities">
+        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUsuarios"
+            aria-expanded="true" aria-controls="collapseUsuarios">
             <i class="fas fa-fw fa-wrench"></i>
-            <span>Usuarios</span>
+            <span>Trabajadores</span>
         </a>
-        <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
+        <div id="collapseUsuarios" class="collapse" aria-labelledby="headingUtilities"
             data-parent="#accordionSidebar">
             <div class="bg-white py-2 collapse-inner rounded">
-                <h6 class="collapse-header">Usuarios:</h6>
-                <a class="collapse-item" href="{% url 'listarUsers' %}">Ver Usuarios</a>
-                <a class="collapse-item" href="{% url 'signUp' %}">Crear Usuarios</a>
+                
+                <a class="collapse-item" href="{% url 'listarUsers' %}">Mis trabajadores</a>
+                <a class="collapse-item" href="{% url 'signUp' %}">Ingresar nuevo trabajador</a>
+                {% comment %} <a class="collapse-item" href="{% url 'crearHorario' %}">Crear Horario Trabajador</a>
+                <a class="collapse-item" href="{% url 'IngresarArchivos' %}">Ingresar archivos</a>
+                <a class="collapse-item" href="{% url 'listarSolicitudes' %}">Ver mis solicitudes</a> {% endcomment %}
 
             </div>
         </div>
     </li>
+
         
 
     </li>
