--- a/static/css/sb-admin-2.css
+++ b/static/css/sb-admin-2.css
@@ -9901,14 +9901,14 @@ a:focus {
 
 .bg-gradient-primary {
   background-color: #4e73df;
-  background-image: linear-gradient(180deg, #4e73df 10%, #224abe 100%);
-  background-size: cover;
+  background-image: linear-gradient(180deg,#000 10%,#6b6d7d 100%);
+  background-size: cover
 }
 
 .bg-gradient-secondary {
   background-color: #858796;
-  background-image: linear-gradient(180deg, #858796 10%, #60616f 100%);
-  background-size: cover;
+  background-image: linear-gradient(180deg,#858796 10%,#60616f 100%);
+  background-size: cover
 }
 
 .bg-gradient-success {
