--- a/template/crudUsuarios/listUser.html
+++ b/template/crudUsuarios/listUser.html
@@ -1,84 +1,96 @@
-{% extends "base.html" %}
+<!doctype html>
+<html lang="en">
 
-{% block title %} Inicio {% endblock title %}
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Listado de personas</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
-{% block content %}
+    <!-- Css de Datatable -->
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.css" />
 
-    <!-- Page Wrapper -->
-    <div id="wrapper">
+    <!-- css de Iconos -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 
-        <!-- Sidebar -->
-        {% if user.is_superuser %}
-            {%include "menus/sideBarAdmin.html"%}
+</head>
+
+<body>
+
+    <div class="container mt-5">
+        <div class="alert alert-info display-3 text-center">
+            Listado de usuarios
+        </div>
+
+
+
+        {% if usuarios %}
+
+        <table class="table" id="miTabla">
+
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Username</th>
+                    <th>First name</th>
+                    <th>Last name</th>
+                    <th>Email</th>
+                </tr>
+            </thead>
+
+            <tbody>
+
+
+                {% for usuario in usuarios %}
+                <tr>
+                <td>{{usuario.usuario.id}}</td>
+                <td>{{usuario.usuario.username}}</td>
+                <td>{{usuario.usuario.first_name}}</td>
+                <td>{{usuario.usuario.last_name}}</td>
+                <td>{{usuario.usuario.email}}</td>
+                </tr>
+
+                {%endfor%}
+            </tbody>
+
+        </table>
+
+
+
         {% else %}
-            {%include "menus/sideBarUser.html"%}
+        <h1>No existen usuarios en la DB</h1>
         {% endif %}
 
-        <!-- End of Sidebar -->
+        <a href="{% url 'signUp' %}" class="btn btn-primary mt-5">Añadir usuario(s)</a>
+        <a href="{% url 'vistaAdmin' %}" class="btn btn-danger mt-5">Volver a panel</a>
 
-        <!-- Content Wrapper -->
-        <div id="content-wrapper" class="d-flex flex-column">
-            <!-- Main Content -->
-            <div id="content">
-                <!-- Topbar -->
-                {% include "menus/topBar.html" %}
-                <!-- End of Topbar -->
-                <!-- Begin Page Content -->
-                <div class="container-fluid">
-                    {% block name %}
-                        <form method="post" action="{% url 'agregarProductos' %}"class="mt-4 mb-4"> <!-- Añade margen superior e inferior al formulario -->
-                            {% csrf_token %}
-                            <fieldset>
-                                <legend>{{ titulo }}</legend>
-                                {{ formProductos.as_p }}
-                            </fieldset>
-                            <button type="submit" value="{{titulo}}" class="btn btn-primary">{{titulo}}</button>
-                        </form>
-                    {% endblock %}
-                </div>
-                <!-- End of Main Content -->
-            </div>
-        </div>
 
-            <!-- Footer -->
-            <footer class="sticky-footer bg-white">
-                <div class="container my-auto">
-                    <div class="copyright text-center my-auto">
-                        <span>Veterinaria Chucky PB </span>
-                    </div>
-                </div>
-            </footer>
-            <!-- End of Footer -->
-
-        </div>
-        <!-- End of Content Wrapper -->
 
     </div>
-    <!-- End of Page Wrapper -->
 
-    <!-- Scroll to Top Button-->
-    <a class="scroll-to-top rounded" href="#page-top">
-        <i class="fas fa-angle-up"></i>
-    </a>
+<br class="my-5">
 
-    <!-- Logout Modal-->
-    <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">¿Estás seguro?</h5>
-                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true"></span>
-                    </button>
-                </div>
-                <div class="modal-body">Seleccione "Cerrar sesión" si está listo para finalizar su sesión actual.</div>
-                <div class="modal-footer">
-                    <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancelar</button>
-                    <a class="btn btn-danger" href="{% url 'logout' %}">Cerrar sesión</a>
-                </div>
-            </div>
-        </div>
-    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 
-{% endblock content %}
+
+    <!-- JS de JQUERY -->
+    <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js"
+        integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script>
+
+    <!-- js de datatable -->
+    <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.js"></script>
+
+    <!-- Script para cargar datatable -->
+    <script>
+        $(document).ready(function () {
+            $('#miTabla').DataTable();
+        });
+    </script>
+
+
+</body>
+
+</html>
