--- a/template/crudUsuarios/listUser.html
+++ b/template/crudUsuarios/listUser.html
@@ -40,6 +40,7 @@
                                 <th>Area</th>
                                 <th>Cargo</th>
                                 <th>Estado</th>
+                                <th>Acciones</th>
                             </tr>
                         </thead>
             
@@ -58,7 +59,31 @@
                             <td>
 
                                 <span class="badge badge-success">Activo</span>
+                            </td>
+                            <td>
+                                <a href="{% url 'modificarUsuario' usuario.id %}" class="btn btn-warning btn-sm">Editar</a>
 
+                                <a href="#" class="btn btn-danger btn-sm" data-toggle="modal" data-target="#modalEliminarUsuario">Eliminar</a>
+                                <!-- Modal de Eliminación -->
+                                <div class="modal fade" id="modalEliminarUsuario" tabindex="-1" role="dialog" aria-labelledby="modalEliminarUsuarioLabel" aria-hidden="true">
+                                    <div class="modal-dialog" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title" id="modalEliminarUsuarioLabel">Confirmar Eliminación</h5>
+                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                    <span aria-hidden="true">&times;</span>
+                                                </button>
+                                            </div>
+                                            <div class="modal-body">
+                                                ¿Estás seguro de que deseas eliminar este usuario?
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                                                <a href="{% url 'eliminarUsuario' usuario.id %}" class="btn btn-danger">Eliminar</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>   
                             </tr>
             
                             {%endfor%}
