--- a/template/crudUsuarios/listUser.html
+++ b/template/crudUsuarios/listUser.html
@@ -33,8 +33,8 @@
                         <thead>
                             <tr>
                                 <th>ID</th>
-                                <th>First name</th>
-                                <th>Last name</th>
+                                <th>Nombre</th>
+                                <th>Apellido</th>
                                 <th>Contrato</th>
                                 <th>Telefono</th>
                                 <th>Area</th>
