--- a/template/homeUser.html
+++ b/template/homeUser.html
@@ -42,7 +42,7 @@
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
-                        <span>Veterinaria Chucky PB </span>
+                        <span>Cooperative Group</span>
                     </div>
                 </div>
             </footer>
