--- a/template/menus/sideBarUser.html
+++ b/template/menus/sideBarUser.html
@@ -40,7 +40,7 @@
                 </hr>
                 <a class="collapse-item" href="#">Solicitudes</a>
                 </hr>
-                <a class="collapse-item" href="#">Mis Documentos</a>
+                <a class="collapse-item" href="#">Mis Documentos 1</a>
                 </hr>
                 <a class="collapse-item" href="#">Directorio</a>
 
