Muestreo de datos

--- a/template/homeUser.html
+++ b/template/homeUser.html
@@ -31,6 +31,10 @@
 
                     <!-- Page Heading -->
                     <h1 class="h3 mb-4 text-gray-800">Parte del usuario</h1>
+                    <p>RUT: {{ trabajador.rut_trabajador }}</p>
+                    <p>Nombre: {{ trabajador.nombre_trabajador }}</p>
+                    <p>Apellido: {{ trabajador.apellido_trabajador }}</p>
+                    
 
                 </div>
                 <!-- /.container-fluid -->
